<resources>
    <string name="app_name">Grape</string>
    <string name="action_Settings">Settings</string>

    <string name="drawer_open">drawer open</string>
    <string name="drawer_close">drawer close</string>

    <string name="facebook_app_id">498040927060782</string>
    <string name="ACCOUNT_KIT_CLIENT_TOKEN">7a1447de254e92f3bfb2b8e6a542ac5d</string>
    <string name="fb_login_protocol_scheme">fbAPP_ID</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="leads">Customer Leads</string>
    <string name="appointments">Manage Appointments</string>
    <string name="contacts">Import Contacts</string>
    <string name="add_appointment">Add Appointment</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="summary">Summary</string>
    <string name="submit">Submit</string>
    <string name="title">Title</string>
    <string name="starting_date">Starting Date</string>
    <string name="stopping_date">Stopping Date</string>
    <string name="all_day">All Day</string>
    <string name="description">Description</string>
    <string name="location">Location</string>
    <string name="date_format">DD/MM/YYYY hh:mm</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="import_new_contacts">import new contacts</string>
    <string name="title_activity_contact_list">ContactList</string>
    <string name="action_settings">Settings</string>
    <string name="click_to_import">click to import</string>
    <string name="null_event">No events created on this date.</string>
    <string name="save_contacts">save_contacts</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="my_tb_title">Add Prospect</string>
    <string name="tb_head_add_prospect">Add Prospect</string>
    <string name="tb_head_dashboard">Home</string>

    <string name="title_activity_dashboard2">Dashboard2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
</resources>
